@@ -1,3 +1,8 @@
+2008-11-04  Juanma Barranquero  <lekktu@gmail.com>
+
+	* org.el (org-columns-modify-value-for-display-function):
+	* org-table.el (org-table-convert-region): Fix typos in docstrings.
+
 2008-10-28  Glenn Morris  <rgm@gnu.org>
 
 	* org-agenda.el (org-agenda-align-tags): Replace use of cl `adjoin'.
